--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <title>Dániel Szalai personal site</title>
   </head>
+
+  <style>
+    hr {
+      border-style: dotted none none none;
+      width: 15%;
+      border-width: 5px;
+    }
+
+    body {
+
+      background-color: tan;
+    }
+
+<!--    img {-->
+<!--    border-style: solid;-->
+<!--    border-width: 5px;-->
+<!--    border-color: sienna;-->
+
+<!--    }-->
+
+  </style>
+
   <body>
 
-  <table cellspacing="40">
+  <table cellspacing="30">
     <tr>
       <td>
         <img src="profil_pic.png">
@@ -17,10 +39,10 @@
         ENGINEER</em>
       </td>
       <td>
-        <h2>Contact info:</h2>
-        Phone: 00-0000-0000<br>
-        Mail: asdasd@mail.com<br>
-        Address: 00100 Miskolc, Erkel Ferenc u. 18/c<br>
+<!--        <h2>Contact info:</h2>-->
+<!--        Phone: 00-0000-0000<br>-->
+<!--        Mail: asdasd@mail.com<br>-->
+<!--        Address: 00100 Miskolc, Erkel Ferenc u. 18/c<br>-->
       </td>
     </tr>
   </table>
