--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="profil_pic.png">
       </td>
       <td>
-        <h1>DANIEL SZALAI</h1>
+        <h1>DÁNIEL SZALAI</h1>
         <em>OCCUPATIONAL HEALTH AND SAFETY
         ENGINEER</em>
       </td>
