--- a/hundex.html
+++ b/hundex.html
@@ -249,8 +249,7 @@
                         » C1 felsőfokú angol nyelvvizsga (2015);<br><br>
                         » B típúsú jogosítvány (2013);<br><br>
                         » Felhasználói szintű MS WORD, EXCEL és POWERPOINT ismeretek.;<br><br>
-                        » Fire protection course in progress. I expect to
-                        finish it by the spring of 2023.Megkezdett tűzvédelmi
+                        » Megkezdett tűzvédelmi
                       előadó tanfolyam (várható végzés: 2023. tavasza).<br><br>
                     </p>
                 </div>
